<resources>
    <string name="app_name">Toe Weather</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="success_btn">Success</string>
    <string name="temperature_text">Temperature:</string>
    <string name="description_text">Description:</string>
    <string name="language_text">Language:</string>
    <string name="display_days_text">Display days:</string>
    <string name="submit_btn">Submit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="zip_code_text">Zip code:</string>
    <string name="degree_type_text">Degree type:</string>
</resources>
