<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/language_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/language_text"/>

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/language_text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="21dp"
        android:entries="@array/language_string"/>

    <TextView
        android:id="@+id/display_days_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/language_text"
        android:layout_marginTop="30dp"
        android:text="@string/display_days_text"/>

    <Spinner
        android:id="@+id/display_days_spinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/display_days_text"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="5dp"
        android:entries="@array/days_string"/>

    <TextView
        android:id="@+id/zip_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_days_text"
        android:layout_marginTop="30dp"
        android:text="@string/zip_code_text"/>

    <EditText
        android:id="@+id/zip_code_value"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_days_text"
        android:layout_toRightOf="@+id/zip_code_text"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/degree_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zip_code_text"
        android:layout_marginTop="30dp"
        android:text="@string/degree_type_text"/>

    <Spinner
        android:id="@+id/degree_type_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zip_code_text"
        android:layout_toRightOf="@+id/degree_type_text"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:entries="@array/degree_type_string"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/degree_type_text"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="80dp"
        android:text="@string/submit_btn"
        bootstrap:bb_type="success"
        bootstrap:bb_size="small"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/degree_type_text"
        android:layout_toRightOf="@+id/submit_btn"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/cancel_btn"
        bootstrap:bb_type="danger"
        bootstrap:bb_size="small"
        />

</RelativeLayout>